--- a/templates/anims/index.html.twig
+++ b/templates/anims/index.html.twig
@@ -131,7 +131,7 @@
 					{% include 'utils/picture.html.twig' with { 'sources': { 'webp': 'img/videos-pic.webp',
 																				 'jpeg': 'img/videos-pic.jpg'
 																			   },
-																	'default': 'img/manouvideos-picchebg.jpg',
+																	'default': 'img/videos-pic.jpg',
 																	'lazyload': false,
 																	'alt': 'Jérémy DUTHEIL, accordéoniste, en concert',
 																	'title': 'Jérémy DUTHEIL, accordéoniste, en concert',
