--- a/templates/pages/manouche.html.twig
+++ b/templates/pages/manouche.html.twig
@@ -1,11 +1,11 @@
 {% extends 'base.html.twig' %}
 
 {% block title %}
-	Groupe de jazz manouche pour vos événements - Mariage, Soirée, Cocktail
+	Groupe de jazz manouche pour vos soirées et événements à Paris
 {% endblock %}
 
 {% block metadesc %}
-	<meta name="description" content="Groupe de jazz manouche professionnel pour vos événements : soirée, cocktail, mariage. Du duo au quartet !">
+	<meta name="description" content="Notre groupe de jazz manouche à Paris anime vos soirées et événements : cocktail d'entreprise, soirée privée, vernissage...">
 {% endblock %}
 
 {% block heading %}
@@ -39,7 +39,7 @@
 			{{ include('utils/contact-cta.html.twig') }}
 
 			<p>
-                Vous recherchez un <strong>groupe de jazz manouche</strong> pour votre soirée privée, <a href="{{ path('groupe_jazz_manouche_mariage_paris') }}">mariage</a>, anniversaire, cocktail d'entreprise ou tout autre événement ? Vous avez fait le tour des sites qui proposent une <strong>recherche de musiciens</strong> et ne savez pas qui choisir ? Vous êtes au bon endroit ! <strong>Musiciens professionnels</strong> et expérimentés, nous vous proposons différentes formules (duo, trio, quartet, ...), toutes sur mesure, pour une animation musicale de qualité lors de votre événement.
+                Vous recherchez un <strong>groupe de jazz manouche</strong> pour votre soirée privée, <a href="{{ path('groupe_jazz_manouche_mariage_paris') }}">mariage</a>, anniversaire, cocktail d'entreprise ou tout autre événement ? À Paris ou en Ile de France ? Vous avez fait le tour des sites qui proposent une <strong>recherche de musiciens</strong> et ne savez pas qui choisir ? Vous êtes au bon endroit ! <strong>Musiciens professionnels</strong> et expérimentés, nous vous proposons différentes formules (duo, trio, quartet, ...), toutes sur mesure, pour une animation musicale de qualité lors de votre événement.
 			</p>
 
 			<p>
